# TxAgent_AMD

./: AMD_GPU_TROUBLESHOOTING.md  README.md  README_AMD.md  TxAgent架构图表验证.docx  TxAgent架构图表验证.md  TxAgent项目架构分析.docx  TxAgent项目架构分析.md  amd_gpu_config.py  install_amd_gpu.sh  install_mi300x.sh  install_rocm62.sh  quick_install_rocm62.sh  run_example.py  run_txagent_app.py  sequenceDiagram.mmd  setup.cfg  项目分析完成报告.md
src/txagent/: gpu_utils.py  toolrag.py  txagent.py  utils.py
