[metadata]
name = txagent
version = 0.1.3
description = TxAgent: An AI Agent for Therapeutic Reasoning Across a Universe of Tools
author = Shanghua Gao
author_email = shanghuagao@gmail.com
url = https://github.com/mims-harvard/TxAgent
long_description = file: README.md
long_description_content_type = text/markdown

[options]
packages = find:
package_dir =
    = src
python_requires = >=3.8
install_requires =
    gradio
    sentence_transformers
    transformers>=4.30.0
    accelerate>=0.20.0
    numpy
    jinja2
    typing-extensions
    # ROCm 6.2 compatible dependencies
    tooluniverse

[options.packages.find]
where = src
